--- a/monirhossain.com/public_html/cp/index.html
+++ b/monirhossain.com/public_html/cp/index.html
@@ -48,7 +48,7 @@
                 <nav id="nav-menu-container">
                     <ul class="nav-menu">
                         <li><a class="js-scroll-trigger" href="#about">About</a></li>
-                        <li><a class="js-scroll-trigger" href="#works">Works</a></li>
+                        <li><a class="js-scroll-trigger" href="#work">Work</a></li>
                         <li><a class="js-scroll-trigger" href="#contact">Contact</a></li>
                         <li><a class="js-scroll-trigger" href="#clients">Clients</a></li>
                     </ul>
@@ -77,7 +77,7 @@
     </div>
 
     <!-- First Grid  -->
-    <div id="works" class="first-grid">
+    <div id="work" class="first-grid">
         <div class="container">
             <!-- Heading Title -->
             <div class="heading d-inline-block">
@@ -432,7 +432,7 @@
             <div class="col-lg-8 col-sm-10 mx-auto">
                 <div class="row cta pt-100">
                     <div class="col-md-6">
-                        <h2 class="h4 font-weight-bold">On-Site. On Set. Online</h2>
+                        <h2 class="h4 font-weight-bold">On-Site. On Set. Online.</h2>
                     </div>
                     <div class="col-md-6">
                         <p class="pb-100 text-justify cta-text ff-ssp">Our <strong>mobile post house</strong> is built around flexibility, allowing our client facing, friendly team to quickly parachute into an existing location or work remotely to execute briefs with exceptional creativity. We love a challenge and would love to get involved, see please do say:
